--- a/index.html
+++ b/index.html
@@ -5,26 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Test</title>
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
-<body>
+<body class="body">
+    <nav>
+        <h1>Vanilla Type</h1>
+        <label class="switch">
+            <input id="check" type="checkbox" onclick="darkLight()">
+            <span class="slider"></span>
+        </label>
+    </nav>
+
     <header>
         <h1>Typing Test</h1>
-        <label for="mode">Select Mode:</label>
+        <label for="mode">Select Level :</label>
         <select id="mode">
             <option value="easy">Easy</option>
             <option value="medium">Medium</option>
             <option value="hard">Hard</option>
+        </select>
+        <label for="Langue">Language :</label>
+        <select name="" id="Langue">
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+            <option value="es">Español</option>
+        </select>
+        <label for="Number">Number of word :</label>
+        <select name="" id="Number">
+            <option value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+            <option value="25">25</option>
+            <option value="30">30</option>
         </select>
     </header>
 
     <main>
         <p id="word-display"></p>
         <input type="text" id="input-field" autofocus>
-        <p id="results">Results : </p>
+        <div class="info word">
+            <p>Wpm :
+            <p id="wpm"></p>
+            </p>
+        </div>
+        <div class="info acc">
+            <p>Accuracy :
+            <p id="accuracy"></p>
+            </p>
+        </div>
+        <div class="info time">
+            <p>Time : </p>
+            <div id="time">
+                <p class="min">00</p>
+                <p>:</p>
+                <p class="sec">00</p>
+            </div>
+        </div>
+        <div class="info progression">
+            <p>Progression : </p>
+            <p id="progres"></p>
+        </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/theme mode.js"></script>
 </body>
 
 </html>
