adding feature like progres, language and limit words

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
         </select>
         <label for="Number">Number of word :</label>
         <select name="" id="Number">
+            <option value="3">3</option>
             <option value="10">10</option>
             <option value="15">15</option>
             <option value="20">20</option>
             <option value="25">25</option>
-            <option value="30">30</option>
+            <option value="30" selected>30</option>
+            <option value="40" >40</option>
+            <option value="50" >50</option>
+            <option value="60" >60</option>
         </select>
     </header>
 
@@ -64,7 +68,7 @@
         </div>
         <div class="info progression">
             <p>Progression : </p>
-            <p id="progres"></p>
+            <p id="progres" >0%</p>
         </div>
     </main>
 
