--- a/landing page.html
+++ b/landing page.html
@@ -16,16 +16,19 @@
         <a href="#how">Comment ça marche</a>
         <a href="#testimonials">Témoignages</a>
         <a href="#faq">FAQ</a>
-        <a href="#play" class="cta-btn">Jouer</a>
+        <a href="index.html" class="cta-btn">Jouer</a>
       </nav>
     </div>
   </header>
 
   <section class="hero">
-    <div class="container">
-      <h2>Maîtrise ton clavier avec fun et efficacité</h2>
+    <div class="container ">
+      <div class="left_cont">
+        <h2>Maîtrise ton clavier avec fun et efficacité</h2>
       <p>Un jeu immersif pour améliorer ta vitesse de frappe et booster ta productivité.</p>
-      <a href="#play" class="primary-btn">Commencer à jouer</a>
+      <a href="index.html" class="primary-btn">Commencer à jouer</a>
+      </div>
+      <img id="clavier_img" src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
     </div>
   </section>
 
@@ -40,10 +43,6 @@
         <div class="feature-card">
           <h3>📊 Statistiques en temps réel</h3>
           <p>Suis ton évolution avec des graphiques clairs et motivants.</p>
-        </div>
-        <div class="feature-card">
-          <h3>🎮 Mode jeu vs amis</h3>
-          <p>Affronte tes amis et grimpe dans les classements.</p>
         </div>
       </div>
     </div>
@@ -60,10 +59,9 @@
     <div class="container">
       <h2>Comment ça marche ?</h2>
       <ol>
-        <li>Crée ton profil gratuitement</li>
         <li>Choisis ton mode de jeu</li>
         <li>Commence à taper et débloque des badges</li>
-        <li>Analyse ta progression et défie tes amis</li>
+        <li>Analyse ta progression et ameliore toi a chaque fois</li>
       </ol>
     </div>
   </section>
@@ -108,8 +106,8 @@
 
   <section class="cta-final" id="play">
     <div class="container">
-      <h2>Prêt·e à améliorer ta frappe ?</h2>
-      <a href="/jeu.html" class="cta-btn">Lancer le jeu maintenant</a>
+      <h2>Prêt à améliorer ta frappe ?</h2>
+      <a href="index.html" class="cta-btn">Lancer le jeu maintenant</a>
     </div>
   </section>
 
