modification for landing page 0.1.5

--- a/landing page.html
+++ b/landing page.html
@@ -16,7 +16,10 @@
         <a href="#how">Comment ça marche</a>
         <a href="#testimonials">Témoignages</a>
         <a href="#faq">FAQ</a>
-        <a href="index.html" class="cta-btn">Jouer</a>
+        <div class="btn-container">
+          <button class="button">Play now</button>
+        </div>
+
       </nav>
     </div>
   </header>
@@ -26,7 +29,7 @@
       <div class="left_cont">
         <h2>Maîtrise ton clavier avec fun et efficacité</h2>
       <p>Un jeu immersif pour améliorer ta vitesse de frappe et booster ta productivité.</p>
-      <a href="index.html" class="primary-btn">Commencer à jouer</a>
+      <button class="btn"> <a href="index.html">Jouer</a></button>
       </div>
       <img id="clavier_img" src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
     </div>
