modification for landing page 0.1.6

--- a/landing page.html
+++ b/landing page.html
@@ -17,7 +17,7 @@
         <a href="#testimonials">Témoignages</a>
         <a href="#faq">FAQ</a>
         <div class="btn-container">
-          <button class="button">Play now</button>
+          <button class="button"><a href="index.html">Play now</a></button>
         </div>
 
       </nav>
