modification for landing page and accuracy bug

--- a/landing page.html
+++ b/landing page.html
@@ -63,7 +63,7 @@
       <h2>Comment ça marche ?</h2>
       <ol>
         <li>Choisis ton mode de jeu</li>
-        <li>Commence à taper et débloque des badges</li>
+        <li>Commence à taper et trouve ton rythme</li>
         <li>Analyse ta progression et ameliore toi a chaque fois</li>
       </ol>
     </div>
