--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <option value="15">15</option>
             <option value="20">20</option>
             <option value="25">25</option>
-            <option value="30">30</option>
+            <option value="30" selected>30</option>
+            <option value="40" >40</option>
+            <option value="50" >50</option>
+            <option value="60" >60</option>
         </select>
     </header>
 
