testing some code for the game

--- a/index.html
+++ b/index.html
@@ -19,28 +19,41 @@
 
     <header>
         <h1>Typing Test</h1>
+        
         <label for="mode">Select Level :</label>
         <select id="mode">
             <option value="easy">Easy</option>
             <option value="medium">Medium</option>
             <option value="hard">Hard</option>
         </select>
+
         <label for="Langue">Language :</label>
         <select name="" id="Langue">
             <option value="en">English</option>
             <option value="fr">Français</option>
             <option value="es">Español</option>
         </select>
+
         <label for="Number">Number of word :</label>
         <select name="" id="Number">
             <option value="10">10</option>
             <option value="15">15</option>
             <option value="20">20</option>
             <option value="25">25</option>
-            <option value="30" selected>30</option>
+            <option value="30" selected >30</option>
             <option value="40" >40</option>
             <option value="50" >50</option>
             <option value="60" >60</option>
+        </select>
+        <label for="duration">Choose duration :</label>
+        <select id="duration">
+            <option value="">00:15</option>
+            <option value="">00:30</option>
+            <option value="">00:45</option>
+            <option value="">01:00</option>
+            <option value="">01:30</option>
+            <option value="">02:00</option>
+            <option value="">02:30</option>
         </select>
     </header>
 
