changing some css

--- a/landing page.html
+++ b/landing page.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TypeMaster - Jeu de Dactylographie</title>
-  <link rel="stylesheet" href="assets/css/landing.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/landing.css">
 </head>
 <body>
   <header>
@@ -32,7 +31,6 @@
       <button class="btn"> <a href="index.html">Jouer</a></button>
       </div>
       <img id="clavier_img" src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
-    </div>
   </section>
 
   <section id="features" class="features">
