feat: add timer at the end

--- a/finish_game.html
+++ b/finish_game.html
@@ -11,10 +11,15 @@
 <body>
 
   <body>
-    <div id="curve_chart"></div>
 
-    <div class="outer">
-      <div class="inner">0%</div>
+
+    <div id="curve_chart"></div>
+    <div class="time"></div>
+    <div class="accuracy">
+      <div class="outer">
+        <div class="inner">0%</div>
+      </div>
+      <p>Accuracy</p>
     </div>
     <button><a href="index.html">Restart Test</a></button>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
