--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <option value="50" >50</option>
             <option value="60" >60</option>
         </select>
-        <label for="theme">Language :</label>
+        <label for="theme">Theme :</label>
         <select name="" id="theme">
             <option value="1">Light</option>
             <option value="2">Dark</option>
