add: WPM at end game

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <option value="3">Memory</option>
             <option value="4">Sea Wave</option>
             <option value="5">Earth</option>
+            <option value="6">Hacker</option>
         </select>
              <div id="time">
                  <p class="min">00</p>
