--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
             <option value="6">Hacker</option>
         </select>
     </header>
-
+    <div id="time">
+        <p class="min">00</p>
+        <p>:</p>
+        <p class="sec">00</p>
+    </div>
     <main>
         <p id="word-display"></p>
         <input type="text" id="input-field" autofocus>
