--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <option value="4">Sea Wave</option>
             <option value="5">Earth</option>
             <option value="6">Hacker</option>
+            <option value="7">Shades of grey</option>
         </select>
     </header>
     <div id="time">
