--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body class="body">
     <nav>
-        <img src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
+        <div class="logo">
+            <img src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
         <h1>Vanilla Type</h1>
+        </div>
     </nav>
 
     <header>
@@ -60,7 +62,7 @@
     </div>
     <main>
         <p id="word-display"></p>
-        <input type="text" id="input-field" autofocus>
+        <input type="text" id="input-field" autofocus  autocomplete="off">
         <div id="keyboard" class="keyboard"></div>
         <div id="information">
         <div class="info word">
@@ -85,9 +87,9 @@
         
     </div>
 
+    <script src="assets/js/keyboard.js"></script>
     <script type="module" src="assets/js/script.js"></script>
     <script src="assets/js/theme mode.js"></script>
-    <script src="assets/js/keyboard.js"></script>
 </body>
 
 </html>
