style : change logo

--- a/finish_game.html
+++ b/finish_game.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/finish.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -29,7 +30,7 @@
       </div>
     </div>
     
-    <button id="btn-restart"><a href="index.html">Restart Test</a></button>
+    <button id="btn-restart"><a href="index.html"> <i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</a></button>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="assets/js/graph.js"></script>
   </body>
