--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="body">
     <nav>
-        <img src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
+        <img src="assets/img/typing-game_2.png" alt="">
         <h1>Vanilla Type</h1>
     </nav>
 
@@ -42,7 +42,7 @@
             <option value="50" >50</option>
             <option value="60" >60</option>
         </select>
-        <label for="theme">Theme :</label>
+        <label for="theme"> <i class="fa-solid fa-palette"></i> Theme :</label>
         <select name="" id="theme">
             <option value="1">Light</option>
             <option value="2">Dark</option>
@@ -75,7 +75,8 @@
         </div>
         
         <div class="info progression">
-            <p>Progression : </p>
+            <p>Progression :
+            </p>
             <p id="progres" >0%</p>
         </div>
         </div>
