style : style navbar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 
 <body class="body">
     <nav>
-<<<<<<< HEAD
         <img src="assets/img/typing-game_2.png" alt="">
-=======
-        <div class="logo">
-            <img src="assets/img/landing_page_clavier-removebg-preview.png" alt="">
->>>>>>> 8eecb76f7899431593ef13a7ea4ee66067631dab
-        <h1>Vanilla Type</h1>
-        </div>
+        <h1>Typing <span>Game</span></h1>
     </nav>
 
     <header>
@@ -30,7 +24,7 @@
             <option value="hard">Hard</option>
         </select>
 
-        <label for="Langue">Language :</label>
+        <label for="Langue"><i class="fa-sharp fa-solid fa-a"></i> Language :</label>
         <select name="" id="Langue">
             <option value="en">English</option>
             <option value="fr">Français</option>
