--- a/finish_game.html
+++ b/finish_game.html
@@ -31,7 +31,9 @@
       </div>
     </div>
     
-    <button id="btn-restart"><a href="index.html"> <i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</a></button>
+    <button id="btn-restart" onclick="goGame()"><a href="index.html"> <i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</a></button>
+
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="assets/js/graph.js"></script>
     <script src="assets/js/theme mode for ending.js"></script>
