--- a/index.html
+++ b/index.html
@@ -16,42 +16,53 @@
     </nav>
 
     <header>
+                
+        <div class="select">
+            <label for="mode">Select Level :</label>
+            <select id="mode">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+        </div>
+
+        <div class="select">
+            <label for="Langue"><i class="fa-sharp fa-solid fa-a"></i> Language :</label>
+            <select name="" id="Langue">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+                <option value="es">Español</option>
+            </select>
+        </div>
+
+        <div class="select">
+            <label for="Number">Number of word :</label>
+            <select name="" id="Number">
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+                <option value="25">25</option>
+                <option value="30" selected >30</option>
+                <option value="40" >40</option>
+                <option value="50" >50</option>
+                <option value="60" >60</option>
+            </select>
+        </div>
+
+        <div class="select">
+            <label for="theme"> <i class="fa-solid fa-palette"></i> Theme :</label>
+            <select name="" id="theme">
+                <option value="1">Light</option>
+                <option value="2">Dark</option>
+                <option value="4">Sea Wave</option>
+                <option value="5">Earth</option>
+                <option value="3">Memory</option>
+                <option value="6">Hacker</option>
+                <option value="7">Shades of grey</option>
+            </select>
+        </div>
+
         
-        <label for="mode">Select Level :</label>
-        <select id="mode">
-            <option value="easy">Easy</option>
-            <option value="medium">Medium</option>
-            <option value="hard">Hard</option>
-        </select>
-
-        <label for="Langue"><i class="fa-sharp fa-solid fa-a"></i> Language :</label>
-        <select name="" id="Langue">
-            <option value="en">English</option>
-            <option value="fr">Français</option>
-            <option value="es">Español</option>
-        </select>
-
-        <label for="Number">Number of word :</label>
-        <select name="" id="Number">
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="25">25</option>
-            <option value="30" selected >30</option>
-            <option value="40" >40</option>
-            <option value="50" >50</option>
-            <option value="60" >60</option>
-        </select>
-        <label for="theme"> <i class="fa-solid fa-palette"></i> Theme :</label>
-        <select name="" id="theme">
-            <option value="1">Light</option>
-            <option value="2">Dark</option>
-            <option value="4">Sea Wave</option>
-            <option value="5">Earth</option>
-            <option value="3">Memory</option>
-            <option value="6">Hacker</option>
-            <option value="7">Shades of grey</option>
-        </select>
     </header>
     <div id="time">
         <p class="min">00</p>
