--- a/finish_game.html
+++ b/finish_game.html
@@ -11,9 +11,12 @@
 
 
 <body>
-
-  <body>
-
+  <nav>
+    <div class="logo">
+        <img src="assets/img/typing-game_2.png" alt="">
+        <h1>Typing <span>Game</span></h1>
+    </div>
+</nav>
 
     <div id="curve_chart"></div>
     
@@ -31,13 +34,14 @@
       </div>
     </div>
     
-    <button id="btn-restart" onclick="goGame()"><a href="index.html"> <i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</a></button>
+    <button class="btn" onclick="goGame()"><i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</button>
 
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="assets/js/graph.js"></script>
     <script src="assets/js/theme mode for ending.js"></script>
+
+
   </body>
-</body>
 
 </html>
