--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <h1>Typing <span>Game</span></h1>
         </div>
     </nav>
+
+    
     <div class="content">
         <div class="sidebar">
             <div class="side-top">
@@ -87,7 +89,7 @@
                     <option value="2">Dark</option>
                     <option value="3">Memory</option>
                     <option value="4">Sea Wave</option>
-                    <option value="5">Earth</option>
+                    <option value="5">brown</option>
                     <option value="6">Hacker</option>
                     <option value="7">Shades of grey</option>
                 </select>
@@ -102,7 +104,7 @@
         </div>
         <main>
             <p id="word-display"></p>
-            <input type="text" id="input-field" autofocus  autocomplete="off">
+            <input type="text" id="input-field" autofocus  autocomplete="off" placeholder="Type here to play">
             <div id="keyboard" class="keyboard"></div>
             <div id="information">
             <div class="info word">
