--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       
           <button type="submit">Envoyer</button>
         </form>
+
+        <button id="feedback-off"> off</button>
       </div>
       
 
@@ -87,7 +89,7 @@
             <button id="tuto-open"><i class="fas fa-book"></i><span>Tutorial</span></button>
             <button><i class="fas fa-star"></i><span>Score</span></button>
             <button id="random"><i class="fas fa-dice"></i><span>Random Game</span></button>
-            <button><i class="fas fa-comment-dots" id="feedback-on"></i><span>Feedback</span></button>
+            <button  id="feedback-on"><i class="fas fa-comment-dots"></i><span>Feedback</span></button>
         </div>
         <div class="side-bottom">
             <button id="btn-deco"><i class="fas fa-sign-out-alt"></i><span>Quit Game</span></button>
