--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
         <button id="feedback-off"> off</button>
       </div>
       
+    <div id="results-container"></div>
+    
 
     <div class="sidebar">
         <div class="side-top">
             <button id="tuto-open"><i class="fas fa-book"></i><span>Tutorial</span></button>
-            <button><i class="fas fa-star"></i><span>Score</span></button>
+            <button id="score"><i class="fas fa-star"></i><span>Score</span></button>
             <button id="random"><i class="fas fa-dice"></i><span>Random Game</span></button>
             <button  id="feedback-on"><i class="fas fa-comment-dots"></i><span>Feedback</span></button>
         </div>
