fix(time in the end): adding time and nbr of word

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><strong>Niveau de difficulté :</strong> Facile, Moyen, Difficile</li>
                 <li><strong>Langue :</strong> Choisis entre anglais, français ou espagnol.</li>
-                <li><strong>Mode chronométré :</strong> 1 minute ou 2 minutes pour plus de challenge !</li>
+                <li><strong>Mode chronométré :</strong> 10s, 15s , 20s , etc... pour plus de challenge !</li>
                 <li><strong>Nombre de mots :</strong> Sélectionne le nombre de mots à taper (10, 20, 30...)</li>
                 <li><strong>Thème :</strong> Choisis entre plusieurs thèmes parmis les proposés</li>
             </ul>
