--- a/landing.html
+++ b/landing.html
@@ -10,20 +10,37 @@
 </head>
 
 <body>
-  <audio id="bg-music" loop>
-    <source src="https://www.soundjay.com/button/beep-07.wav" type="audio/wav">
-  </audio>
+
 
   <div class="container">
+    <div class="left">
+      <div class="back"></div>
+      <h1>Sign in</h1>
+
+      <p class="typing-animation" id="typing"></p>
+      <div class="mail">
+          <i id="icon" class="fa-solid fa-user"></i>
+          <input type="email" name="email" id="email" placeholder="Name" autocomplete="off" required>
+      </div>
+      <div class="pass">
+          <i id="icon" class="fa-solid fa-key"></i>
+          <input type="password" name="password" id="password" placeholder="Password" autocomplete="off" required>
+      </div>
+      <button class="cta-button">Sign in</button>
+
+  </div>
+  <div class="bars"></div>
+  <div class="right">
     <img src="assets/img/typing-game_2.png" alt="">
     <h1>Typing Game</h1>
-    <p class="typing-animation" id="typing"></p>
-    <button class="cta-button" onclick="startGame()"> <a href="index.html"></a>Jouer Maintenant</button>
+
+    <div class="stats-box">
+      <h3>Statistiques </h3>
+      <p> WPM (Moyenne Mondial): <span id="wpm">40</span></p>
+      <p> WPM (Record du monde):  <br> <br><span id="wpm">  293 WPM achieved by @MythicalRocket</span></p>
+    </div>
   </div>
-  <div class="stats-box">
-    <h3>Statistiques </h3>
-    <p> WPM (Moyenne Mondial): <span id="wpm">40</span></p>
-    <p> WPM (Record du monde): <span id="wpm">293 WPM achieved by @MythicalRocket</span></p>
+
   </div>
 
 
