style: add default theme

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <select id="theme">
                 <option value="2">Dark</option>
                 <option value="3">Memory</option>
-                <option value="4">Sea Wave</option>
+                <option value="4" selected>Sea Wave</option>
                 <option value="5">Brown</option>
                 <option value="7">Shades of Grey</option>
             </select>
