fix: debug accuracy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <img src="assets/img/typing-game_2.png" alt="">
             <h1>Typing <span>Game</span></h1>
         </div>
+        <button id="resp-btn"><i class="fa-solid fa-bars"></i></button>
     </nav>
 
     <div class="carrousel tuto">
@@ -142,9 +143,6 @@
             <button id="applyCustomTheme" class="next-btn center">Appliquer</button>
         </div>
     </div>
-
-
-
 
     <div class="sidebar">
         <div class="side-top">
