--- a/landing.html
+++ b/landing.html
@@ -36,7 +36,7 @@
 
     <div class="stats-box">
       <h3>Statistiques </h3>
-      <p> WPM (Moyenne Mondial): <span id="wpm">40</span></p>
+      <p> WPM (Moyenne Mondial): <span id="wpm">40 WPM</span></p>
       <p> WPM (Record du monde):  <br> <br><span id="wpm">  293 WPM achieved by @MythicalRocket</span></p>
     </div>
   </div>
