fix: responsive bug

--- a/index.html
+++ b/index.html
@@ -83,7 +83,23 @@
 
         <button id="feedback-off"><i class="fa-solid fa-xmark"></i></button>
     </div>
-
+    <div id="leaderboard">
+        <h2> Leaderboard</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>WPM</th>
+              <th>Accuracy</th>
+              <th>Words</th>
+              <th>Language</th>
+            </tr>
+          </thead>
+          <tbody id="leaderboard-body">
+          </tbody>
+        </table>
+      </div>
+      
 
     <div id="option">
         <h1><i class="fa-solid fa-gear"></i> Paramètres</h1>
