--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <tbody id="leaderboard-body">
           </tbody>
         </table>
+        
       </div>
       
 
@@ -163,6 +164,7 @@
     <div class="sidebar">
         <div class="side-top">
             <button id="random"><i class="fas fa-dice"></i><span>Random Game</span></button>
+            <button id="score-btn" class="score-btn"><i class="fas fa-trophy"></i><span> Score</span></button>
             <button id="tuto-open"><i class="fas fa-book"></i><span>Tutorial</span></button>
             <button id="feedback-on"><i class="fas fa-comment-dots"></i><span>Feedback</span></button>
             <button id="Setting"><i class="fa-solid fa-gear"></i><span>Setting</span></button>
