--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <button id="feedback-off"><i class="fa-solid fa-xmark"></i></button>
     </div>
     <div id="leaderboard">
+        <button id="close-btn" class="close-btn"><i class="fas fa-times"></i></button>
+  
         <h2> Leaderboard</h2>
         <table>
           <thead>
