add & style: progres bar

--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
                 <option value="2">Dark</option>
                 <option value="3">Memory</option>
                 <option value="4" selected>Sea Wave</option>
-                <option value="5">Brown</option>
                 <option value="7">Shades of Grey</option>
             </select>
         </div>
@@ -236,6 +235,10 @@
                 <p>:</p>
                 <p class="sec">00</p>
             </div>
+            <div id="progress-timer-container">
+                <div id="progress-timer-bar"></div>
+              </div>
+              
             <main>
                 <p id="word-display"></p>
                 <input type="text" id="input-field" autofocus autocomplete="off" placeholder="Type here to play">
