fix: toogle button

--- a/finish_game.html
+++ b/finish_game.html
@@ -22,7 +22,7 @@
 
   <div id="curve_chart"></div>
 
-  <div class="tsyaiko">
+  <div class="stat">
     <div class="time"></div>
     <div class="wpm-container">
       <span id="wpm-value">0</span>
