--- a/finish_game.html
+++ b/finish_game.html
@@ -22,6 +22,8 @@
 
   <div id="curve_chart"></div>
 
+
+  <p class="comment"></p>
   <div class="stat">
     <div class="time"></div>
     <div class="wpm-container">
@@ -35,7 +37,7 @@
       <p>Accuracy</p>
     </div>
   </div>
-
+  <p></p>
   <button class="btn" onclick="goGame()"><i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</button>
 
 
