add: time in score leaderboard

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <thead>
             <tr>
               <th>#</th>
+              <th>Time</th>
               <th>WPM</th>
               <th>Accuracy</th>
               <th>Words</th>
