style: responsive for ending

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="leaderboard">
         <button id="close-btn" class="close-btn"><i class="fas fa-times"></i></button>
   
-        <h2> Leaderboard</h2>
+        <h2> Historique des scores</h2>
         <table>
           <thead>
             <tr>
@@ -114,6 +114,7 @@
             <select id="theme">
                 <option value="2">Dark</option>
                 <option value="3">Memory</option>
+                <option value="5">brown</option>
                 <option value="4" selected>Sea Wave</option>
                 <option value="7">Shades of Grey</option>
             </select>
