add: combo alt+Enter

--- a/finish_game.html
+++ b/finish_game.html
@@ -37,7 +37,7 @@
       <p>Accuracy</p>
     </div>
   </div>
-  <button class="btn" onclick="goGame()"><i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</button>
+  <button id="replay-btn" class="btn"><i class="fa-solid fa-rotate-left"></i>&nbsp; Restart Test</button>
 
 
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
